--- a/public/index.html
+++ b/public/index.html
@@ -236,14 +236,14 @@
 </head>
 <body>
   <main class="container">
-    <h1>Welcome to the NASHBOT</h1>
+    <h1>Welcome to ChatBotV2</h1>
     <span class="version">version 2.2</span>
     <a href="#" class="guide-button" id="toggleGuide">Show Guide</a>
     
     <div id="guideSection" class="guide-section">
       <div class="guide-header">Guide</div>
       <div class="guide-content">
-        <p>Follow these steps to use NASHBOT:</p>
+        <p>Follow these steps to use ChatBotV2:</p>
         <ol>
           <li>
             <strong>Obtain your App State:</strong> Go to kiwi browser and log in to your Facebook account. and go to c3c on extension and copy the appstate. 
@@ -294,7 +294,7 @@
   </main>
 
   <div class="footer">
-    <p>&copy; 2024 Joshua Apostol. All rights reserved.</p>
+    <p>&copy; 2024 Alex Jhon Ponce. All rights reserved.</p>
   </div>
 
   <script>
